--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,7 @@
 	<script src="/webjars/jquery/3.3.1-2/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
-	<h1>Hello, world!</h1>
+	<h1>Hi, world!</h1>
+	안녕하세요!
 </body>
 </html>
